data/simultaneous_conservative_view_by_pyeong.log
/home/runner/work/apgujeong-allocation-view-recommender/apgujeong-allocation-view-recommender/tools/run_simultaneous_conservative_pyeong_calc.js:193
  '- 한강라인: `hangang_line_all.geojson`',
            ^^^^^^^^^^^^^^^^

SyntaxError: Unexpected identifier 'hangang_line_all'
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at Module._compile (node:internal/modules/cjs/loader:1495:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:164:12)
    at node:internal/main/run_main_module:28:49

Node.js v20.20.2
